Fix about headline align

--- a/src/sass/modules/_about.scss
+++ b/src/sass/modules/_about.scss
@@ -153,6 +153,7 @@
     @include atTablet {
         // box model
         font-size: 2rem;
+        text-align: left;
         width: auto;
     }
 
